# datario-cli

./: .gitignore  .gitlab-ci.yml  README.md  edrio.py  get-datario.sh  main.py  pyproject.toml  requirements-dev.txt
.github/workflows/: release.yaml
datario_cli/: __init__.py  cli.py  constants.py  install.py  logger.py  utils.py
datario_cli/sub/: config.py  gke.py  prefect.py
edrio/: __init__.py  cli.py  constants.py  install.py  logger.py  utils.py
edrio/sub/: config.py  gke.py  prefect.py
