[tool.poetry]
name = "datario_cli"
version = "0.1.0"
description = "Escritório de Dados Rio CLI Tool"
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
typer = "^0.4.0"
pyinstaller = "^4.8"
loguru = "^0.5.3"
emoji = "^1.6.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
